# Deep-Learning-Based-Multimodal-Data-Fusion-Framework-for-Raman-Derived-Spatial-Composition-maps--2D

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: default_config.json
docs/: evaluation_metrics.md  migration_notes.md  model_architectures.md  step_1_preprocessing.md
examples/: preprocess_dataset.py
notebooks/: ML_fusion_2D_GIT_original.ipynb  README.md  clean_workflow.ipynb
scripts/: evaluate_models.py  preprocess_data.py  train_model.py
src/ml_phantom/: __init__.py  cli.py  config.py  data.py  eda.py  metrics.py  visualization.py
src/ml_phantom/models/: __init__.py  architectures.py
src/ml_phantom/training/: train.py
tests/: test_data.py  test_metrics.py
